--- a/src/app/pages/connexion/connexion.component.html
+++ b/src/app/pages/connexion/connexion.component.html
@@ -12,6 +12,11 @@
         <div class="mb-3" class="text-center">
             <button type="submit" class="btn btn-primary">Connectez-vous</button>   
         </div>
+        <div class="text-center mt-3">
+            <p>pas encore inscrit?
+                <a routerLink="/" class="link-info">Iscrivez-vous</a>
+            </p>
+        </div>
         
     </form>
 
