--- a/src/app/page/destination/destination.component.html
+++ b/src/app/page/destination/destination.component.html
@@ -4,7 +4,7 @@
 
     <div class="row mb-4">
         <div class="col-9">
-            <input type="text" class="form-control" [(ngModel)]="currentSearch" placeholder="Paris" />
+            <input type="text" class="form-control" [(ngModel)]="newDestinationName" placeholder="Paris" />
         </div>
         <div class="col-3">
             <button class="btn btn-primary" (click)="onAddTravelClick()">Ajouter</button>
