--- a/src/app/pages/inscription/inscription.component.html
+++ b/src/app/pages/inscription/inscription.component.html
@@ -59,5 +59,6 @@
             <a routerLink="connexion" class="link-info">Connectez-vous</a>
         </p>
     </div>
+    <div></div>
   </form>
 </div>
