--- a/src/app/pages/inscription/inscription.component.html
+++ b/src/app/pages/inscription/inscription.component.html
@@ -10,6 +10,7 @@
         class="form-control"
         placeholder="Prénom"
         aria-label="firstname"
+        formControlName="firstname"
         ngModel
         name="firstname"
       />
@@ -22,6 +23,7 @@
         class="form-control"
         placeholder="Nom"
         aria-label="lastname"
+        formControlName="lastname"
         ngModel
         name="lastname"
       />
@@ -34,6 +36,7 @@
         class="form-control"
         placeholder="monemail@domaine.com"
         aria-label="email"
+        formControlName="email"
         ngModel
         name="email"
       />
@@ -47,6 +50,7 @@
         class="form-control"
         placeholder="mot de passe"
         aria-label="password"
+        formControlName="password"
         ngModel
         name="password"
       />
